# pygame_piano

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
midi_pkg/: 03_practice.py  bkup1.py  bkup2.py  bkup3.py  bkup4.py  main.py  practice.py  practice2.py  run.py
piano/: __init__.py
piano/core/: logger.py
piano/ui/: screens.py
